--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ debug=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
 spring.jackson.time-zone=UTC
+
+#spring.aop.proxy-target-class=false 옵션에 따라 proxy 객체가 달라진다
+spring.aop.proxy-target-class=false
